@@ -1,3 +1,8 @@
+2009-10-19  Don Lee  <don.lee@sunplusct.com>
+
+	* score-tdep.c: Delete some simulator dependent codes.
+	* score-tdep.h: Delete some simulator dependent macro definitions.
+
 2008-10-16  Steven G. Kargl  <kargl@gcc.gnu.org>  (tiny patch)
 
 	* amd64fbsd-nat.c (amd64fbsd_supply_pcb): Conditionally compile in
